DevOps/force-app/main/default/objects/Online_Referral__c/Online_Referral__c.object-meta.xml
<CustomObject>
    <description>Online Referrals for Programs not associated with Hende</description>
    <label>Online Referral</label>
    <nameField>
        <displayFormat>OR-{00000000}</displayFormat>
        <label>Online Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>