DevOps/force-app/main/default/objects/Online_Referral__c/fields/ATSI_Status__c.field-meta.xml
<CustomField>
    <fullName>ATSI_Status__c</fullName>
    <label>ATSI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexAboriginalOrTorresStraitIslander</valueSetName>
    </valueSet>
</CustomField>