DevOps/force-app/main/default/objects/Online_Referral__c/fields/Best_Time_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Contact__c</fullName>
    <description>What is the best time to contact the Young Person or guardian?</description>
    <inlineHelpText>What is the best time to contact the Young Person or guardian?</inlineHelpText>
    <label>Best Time to Contact</label>
    <type>TextArea</type>
</CustomField>