DevOps/force-app/main/default/objects/Online_Referral__c/fields/Consent_to_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Contact_Date__c</fullName>
    <label>Consent to Contact Date</label>
    <type>Date</type>
</CustomField>