DevOps/force-app/main/default/objects/Online_Referral__c/fields/Contact_to_begin_the_intake_process__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_begin_the_intake_process__c</fullName>
    <description>Who do we contact to begin the intake process?
(direct contact with the Young Person is always preferred where possible)</description>
    <inlineHelpText>Who do we contact to begin the intake process?
(direct contact with the Young Person is always preferred where possible)</inlineHelpText>
    <label>Contact to begin the intake process</label>
    <length>200</length>
    <type>Text</type>
</CustomField>