DevOps/force-app/main/default/objects/Online_Referral__c/fields/Date_of_Referral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral__c</fullName>
    <label>Date of Referral</label>
    <required>true</required>
    <type>Date</type>
</CustomField>