DevOps/force-app/main/default/objects/Online_Referral__c/fields/Date_of_Referral_PDF__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Referral_PDF__c</fullName>
    <formula>TEXT(DAY(Date_of_Referral__c)) &amp; &quot;-&quot; &amp; TEXT(MONTH(Date_of_Referral__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Date_of_Referral__c))</formula>
    <label>Date of Referral PDF</label>
    <type>Text</type>
</CustomField>