DevOps/force-app/main/default/objects/Online_Referral__c/fields/Date_Parent_Guardian_Consented__c.field-meta.xml
<CustomField>
    <fullName>Date_Parent_Guardian_Consented__c</fullName>
    <label>Date Parent/Guardian Consented</label>
    <type>Date</type>
</CustomField>