DevOps/force-app/main/default/objects/Online_Referral__c/fields/Date_Young_Person_Consented__c.field-meta.xml
<CustomField>
    <fullName>Date_Young_Person_Consented__c</fullName>
    <label>Date Young Person Consented</label>
    <type>Date</type>
</CustomField>