DevOps/force-app/main/default/objects/Online_Referral__c/fields/Emergency_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Email__c</fullName>
    <label>Emergency Contact Email</label>
    <type>Email</type>
</CustomField>