DevOps/force-app/main/default/objects/Online_Referral__c/fields/Gender_Identity__c.field-meta.xml
<CustomField>
    <fullName>Gender_Identity__c</fullName>
    <label>Gender Identity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>