DevOps/force-app/main/default/objects/Online_Referral__c/fields/Headspace_Location__c.field-meta.xml
<CustomField>
    <fullName>Headspace_Location__c</fullName>
    <label>Headspace Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lismore</fullName>
            </value>
            <value>
                <fullName>Ballina</fullName>
            </value>
            <value>
                <fullName>Tweed Heads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>