DevOps/force-app/main/default/objects/Online_Referral__c/fields/How_did_the_Young_Person_Consent__c.field-meta.xml
<CustomField>
    <fullName>How_did_the_Young_Person_Consent__c</fullName>
    <label>How did the Young Person Consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>