DevOps/force-app/main/default/objects/Online_Referral__c/fields/Intake_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Intake_Contact_Phone__c</fullName>
    <label>Intake Contact Phone</label>
    <type>Phone</type>
</CustomField>