DevOps/force-app/main/default/objects/Online_Referral__c/fields/Is_an_Interpreter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_an_Interpreter_Needed__c</fullName>
    <label>Is an Interpreter Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>