DevOps/force-app/main/default/objects/Online_Referral__c/fields/Language_Spoken_at_Home__c.field-meta.xml
<CustomField>
    <fullName>Language_Spoken_at_Home__c</fullName>
    <label>Language Spoken at Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexLanguage</valueSetName>
    </valueSet>
</CustomField>