DevOps/force-app/main/default/objects/Online_Referral__c/fields/Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Living_Situation__c</fullName>
    <label>Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live alone</fullName>
            </value>
            <value>
                <fullName>With family</fullName>
            </value>
            <value>
                <fullName>With caregiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>