DevOps/force-app/main/default/objects/Online_Referral__c/fields/Online_Referral_Share__c.field-meta.xml
<CustomField>
    <fullName>Online_Referral_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for allowing a record to be shared for PDF generation.</description>
    <inlineHelpText>Checkbox for allowing a record to be shared for PDF generation.</inlineHelpText>
    <label>Online Referral Share</label>
    <type>Checkbox</type>
</CustomField>