DevOps/force-app/main/default/objects/Online_Referral__c/fields/Other_Services_or_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_or_Agencies__c</fullName>
    <description>Other services or agencies you know are involved in the Young Person’s care:</description>
    <inlineHelpText>Other services or agencies you know are involved in the Young Person’s care:</inlineHelpText>
    <label>Other Services or Agencies</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>