DevOps/force-app/main/default/objects/Online_Referral__c/fields/Parent_Guardian_Consent__c.field-meta.xml
<CustomField>
    <fullName>Parent_Guardian_Consent__c</fullName>
    <description>If the Young Person is under the age of 16, consent from their legal guardian is required.</description>
    <inlineHelpText>If the Young Person is under the age of 16, consent from their legal guardian is required.</inlineHelpText>
    <label>Parent/Guardian Consent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>