DevOps/force-app/main/default/objects/Online_Referral__c/fields/Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Pronouns__c</fullName>
    <label>Pronouns</label>
    <length>50</length>
    <type>Text</type>
</CustomField>