DevOps/force-app/main/default/objects/Online_Referral__c/fields/Referrer_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Organisation__c</fullName>
    <label>Referrer Organisation</label>
    <length>200</length>
    <type>Text</type>
</CustomField>