DevOps/force-app/main/default/objects/Online_Referral__c/fields/Referrer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Phone__c</fullName>
    <label>Referrer Phone</label>
    <type>Phone</type>
</CustomField>