DevOps/force-app/main/default/objects/Online_Referral__c/fields/Referrer_Position__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Position__c</fullName>
    <label>Referrer Position</label>
    <length>200</length>
    <type>Text</type>
</CustomField>