DevOps/force-app/main/default/objects/Online_Referral__c/fields/Safety_plan_in_place__c.field-meta.xml
<CustomField>
    <fullName>Safety_plan_in_place__c</fullName>
    <description>Is there a safety plan in place?</description>
    <inlineHelpText>Is there a safety plan in place?</inlineHelpText>
    <label>Safety plan in place?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>