DevOps/force-app/main/default/objects/Online_Referral__c/fields/Safety_Risks_or_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Safety_Risks_or_Concerns__c</fullName>
    <description>Are there any safety or risk concerns for the Young Person?</description>
    <inlineHelpText>Are there any safety or risk concerns for the Young Person?</inlineHelpText>
    <label>Safety Risks or Concerns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>