DevOps/force-app/main/default/objects/Online_Referral__c/fields/Safety_Risks_or_Concerns_Description__c.field-meta.xml
<CustomField>
    <fullName>Safety_Risks_or_Concerns_Description__c</fullName>
    <description>Please describe Safety Risks or Concerns</description>
    <inlineHelpText>Please describe</inlineHelpText>
    <label>Safety Risks or Concerns Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>