DevOps/force-app/main/default/objects/Online_Referral__c/fields/Sex_Assigned_at_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sex_Assigned_at_Birth__c</fullName>
    <label>Sex Assigned at Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DexGender</valueSetName>
    </valueSet>
</CustomField>