DevOps/force-app/main/default/objects/Online_Referral__c/fields/Support_Information__c.field-meta.xml
<CustomField>
    <fullName>Support_Information__c</fullName>
    <description>Can you provide some more information about some support the Young Person might be seeking?</description>
    <inlineHelpText>Can you provide some more information about some support the Young Person might be seeking?</inlineHelpText>
    <label>Support Information</label>
    <length>65536</length>
    <type>Html</type>
</CustomField>