DevOps/force-app/main/default/objects/Online_Referral__c/fields/Young_Person_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Young_Person_Challenges__c</fullName>
    <description>Please tell us the challenges the Young Person is experiencing that they would like help with.
Note - If the Young People is needing support with something that is not listed, please let us know. This is not a comprehensive list of the supports we provide.</description>
    <inlineHelpText>Please tell us the challenges the Young Person is experiencing that they would like help with.
Note - If the Young People is needing support with something that is not listed, please let us know. This is not a comprehensive list of the supports we provide.</inlineHelpText>
    <label>Young Person Challenges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feeling down or stressed</fullName>
            </value>
            <value>
                <fullName>Wanting to see a GP</fullName>
            </value>
            <value>
                <fullName>Sexual health (including contraception and sexual health checks)</fullName>
            </value>
            <value>
                <fullName>Support with work or study</fullName>
            </value>
            <value>
                <fullName>Alcohol or other drugs negatively impacting Young Person&apos;s life</fullName>
            </value>
            <value>
                <fullName>Relationship issues</fullName>
            </value>
            <value>
                <fullName>Troubles with family or friends</fullName>
            </value>
            <value>
                <fullName>Want to talk about sexuality or gender identity</fullName>
            </value>
            <value>
                <fullName>Issues with bullying and or harassment</fullName>
            </value>
            <value>
                <fullName>Physical health issues</fullName>
            </value>
            <value>
                <fullName>Issues with self-harm</fullName>
            </value>
            <value>
                <fullName>Body image or eating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>