DevOps/force-app/main/default/objects/Online_Referral__c/fields/Young_Person_given_consent_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Young_Person_given_consent_to_contact__c</fullName>
    <description>Has the Young Person given consent to contact the Parent/Guardian?</description>
    <inlineHelpText>Has the Young Person given consent to contact the Parent/Guardian?</inlineHelpText>
    <label>Young Person given consent to contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>