DevOps/force-app/main/default/objects/Online_Referral__c/fields/Young_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Young_Person_Name__c</fullName>
    <label>Young Person Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>