DevOps/force-app/main/default/objects/Online_Referral__c/recordTypes/headspace.recordType-meta.xml
<RecordType>
    <fullName>headspace</fullName>
    <active>true</active>
    <label>headspace</label>
</RecordType>